# 3Jam

./: .gitignore  README.md  idea.md  index.html  index.js  showcase.yaml
2017-0828/: index.html
2017-0828/src/: game.js
2017-1108/src/: game.js
2018-0504/: idea.md
2018-0504/scripts/: draw.js  game.js  input.js  main.js  scene.js
2018-0617/: index.html
2018-0617/scripts/: drawManager.js  game.js  input.js  main.js  sceneBase.js  sceneManager.js  target.js  title.js
2019-0505/: .gitignore  Cargo.toml  app.js  showcase.yaml
2019-0505/src/: game.rs  lib.rs
2019-0505/src/game/: event.rs  number.rs  shape.rs  text.rs
2019-0505/src/game/scene/: play.rs
2019-0505/src/game/shape/: circle.rs
2019-0916/: idea.md  package-lock.json  showcase.yaml
2019-0916/public/: bundle.js
2019-0916/src/: stage.ts
2019-0916/src/lib/: drawManager.ts
2020-0220/: .gitignore  package-lock.json
2020-0220/public/: bundle.js  index.html
2020-0220/src/scene/game/: game.ts
public/: index.html
scripts/: entity.js  game.js  main.js  player.js  scene.js  utility.js
src/: game.ts  main.js  stage.ts  title.ts
src/game/: player.rs  scene.rs  window.rs
src/game/scene/: end.rs  play.rs  title.rs
src/game/shape/: point.rs  rect.rs
src/lib/: camera.ts  drawManager.ts  inputKey.ts  inputMouse.ts
src/scene/: title.ts
src/scene/game/: game.ts
