[package]
name = "canvas"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"

[dependencies.web-sys]
version = "0.3.20"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'MouseEvent',
  'EventTarget',
  'KeyboardEvent',
  'Event',
  'Node',
  'WheelEvent',
  'Location',
]
